<resources>
    <string name="app_name">RiceBuddy</string>
    <string name="btn_register">REGISTER</string>
    <string name="sign_up">Daftar Akun</string>
    <string name="password">Kata Sandi</string>
    <string name="re_password">Ketik Ulang Kata Sandi</string>
    <string name="btn_login">LOGIN</string>
    <string name="text_welcome">Selamat datang di aplikasi RiceBuddy. Pada aplikasi ini, anda dapat mendeteksi penyakit pada tanaman padi, mengecek berita seputar agrikultur, mengecek cuaca, dan mencari lokasi toko obat atau produk tanaman dalam satu genggaman. Untuk memulai silahkan klik register untuk membuat akun dan klik login untuk masuk ke aplikasi.</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="content_description_profile">Content Description Profile</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="content_description_about">Content Description About</string>
    <string name="sign_out">Sign Out</string>
    <string name="content_description_sign_out">Content Description Sign Out</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm">CONFIRM</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_Panduan">Panduan</string>
    <string name="title_produk">Produk</string>
    <string name="title_forum">Forum</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_product">Nama Produk</string>
    <string name="dummy_location">Lokasi Produk</string>
    <string name="harga_produk">Harga Produk</string>
    <string name="dummy_stock">Stok Produk</string>
    <string name="description_tittle">Deskripsi Barang</string>
    <string name="shop_location">Lokasi Toko</string>
    <string name="speakable_toko">Lokasi Toko</string>
    <string name="speakable_image">Gambar Produk</string>
    <string name="speakable_product">Gambar Produk</string>
    <string name="nama_forum">Nama Forum</string>
    <string name="degree_value">%s\u00B0</string>
    <string name="ditulis_oleh">Ditulis Oleh</string>
    <string name="detail_permasalahan">Detail Permasalahan</string>
    <string name="your_problems">Your problems...</string>
    <string name="komentar">Komentar</string>
    <string name="tambahkan_komentar">Tambahkan Komentar</string>
    <string name="enter_comment">Masukkan Komentar Anda Disini</string>
    <string name="input_komentar">Unggah Komentar</string>
    <string name="title_activity_camera">Camera_Activity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="nama_penyakit">Nama Penyakit</string>
    <string name="nama_alternatif_penyakit">Nama Alternatif Penyakit</string>
    <string name="infomrasi_penyakit">Informasi Penyakit</string>
    <string name="pencegahan_dan_penyembuhan_penyakit">Pencegahan dan Penyembuhan Penyakit</string>
    <string name="detail_penyakit">detail_penyakit</string>
    <string name="kembali_ke_halaman_utama">Kembali Ke Halaman Utama</string>
    <string name="cuaca_terkini">Cuaca Terkini</string>
    <string name="city_name">City Name</string>
    <string name="date">Tanggal</string>
    <string name="degree">Suhu</string>
    <string name="berita_terkini">Berita Terkini</string>
    <string name="click_to_capture">Klik untuk mengambil gambar</string>
    <string name="change_camera">Klik untuk mengubah kamera yang digunakan</string>
    <string name="take_camera">Ambil Melalui Kamera</string>
    <string name="take_gallery">Ambil melalui Galeri</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="ketik_pesan_disini">Ketik Pesan Disini....</string>
    <string name="pesan_berhasil_terkirim">Pesan Berhasil Terkirim</string>
    <string name="gagal_mengirim_pesan">"Gagal mengirim pesan "</string>
    <string name="membutuhkan_lokasi">Membutuhkan Lokasi</string>
    <string name="untuk_menggunakan_aplikasi_silahkan_aktifkan_layanan_lokasi">Untuk menggunakan aplikasi, silahkan aktifkan layanan lokasi</string>
    <string name="aktifkan_lokasi">Aktifkan Lokasi</string>
    <string name="upload_failed">Terjadi kesalahan, silahkan pilih foto yang valid dan coba lagi</string>
    <string name="something_wrong">Terjadi kesalahan, silahkan pilih ulang foto yang valid dan coba kembali</string>
    <string name="model_loading">Mohon tunggu, model sedang mendeteksi</string>
    <string name="tips_dan_trik">Cek Toko</string>
    <string name="need_something">Butuh obat atau produk tanaman lain?, cek toko disekitar anda untuk membeli produk tersebut dengan mengklik tombol cek sekarang!</string>
    <string name="gambar_penyakit">Gambar Penyakit</string>
    <string name="check_now">Cek Sekarang</string>
    <string name="panduan_aplikasi">Panduan Aplikasi</string>
    <string name="ambil_ngambar">Ambil\nGambar</string>
    <string name="ambil_gambar_padi">Ambil gambar padi</string>
    <string name="langkah_selanjutnya">langkah selanjutnya</string>
    <string name="lihat_ndiagnosa">Lihat\nDiagnosa</string>
    <string name="lihat_hasil_diagonosa">Lihat Hasil Diagonosa</string>
    <string name="lihat_cara_pencegahan_dan_penyembuhan">Lihat cara Pencegahan dan Penyembuhan</string>
    <string name="cek_pencegahan_dan_n_penyembuhan">Cek Pencegahan dan\n Penyembuhan</string>
    <string name="gambar_yang_dipilih">Gambar yang dipilih</string>
    <string name="gambar_yang_akan_digunakan">Gambar yang akan digunakan</string>
    <string name="upload_gambar">Upload Gambar</string>
    <string name="rice_buddy">Rice Buddy</string>
    <string name="berhasil_login">Berhasil Login</string>
    <string name="email_yang_digunakan_tidak_valid">Email yang digunakan tidak valid</string>
    <string name="password_yang_anda_masukkan_salah">Password yang anda masukkan salah</string>
    <string name="terdapat_kesalahan_saat_akses_server_mohon_coba_kembali">Terdapat kesalahan saat akses server, periksa kembali koneksi internet anda dan mohon coba kembali</string>
    <string name="tolong_isi_kolom_ini">Tolong isi kolom ini</string>
    <string name="format_email_yang_dimasukkan_salah">Format email yang dimasukkan salah</string>
    <string name="kolom_ini_wajib_diisi">Kolom ini wajib diisi</string>
    <string name="jumlah_karakter_password_harus_lebih_dari_8_karakter">Jumlah karakter password harus lebih dari 8 karakter</string>
    <string name="berhasil_membuat_akun_silahkan_login_menggunakan_akun_yang_telah_dibuat">Berhasil membuat akun, silahkan login menggunakan akun yang telah dibuat</string>
    <string name="kolom_ini_harus_diisi">Kolom ini harus diisi</string>
    <string name="password_yang_dimasukkan_tidak_sama">Password yang dimasukkan tidak sama</string>
    <string name="permission_denied">Agar aplikasi dapat berjalan dengan baik, mohon izinkan akses yang dibutuhkan aplikasi</string>
    <string name="weather_failure">Terjadi kesalahan, Silahkan muat ulang halaman untuk menampilkan data cuaca</string>
    <string name="username">Nama Pengguna</string>
    <string name="muat_ulang">Muat Ulang</string>
    <string name="ricebuddy">RiceBuddy</string>
    <string name="email_yang_digunakan">Email yang digunakan</string>
    <string name="enter_name">Masukkan Nama</string>
    <string name="simpan_profil">Simpan Profil</string>
    <string name="verifikasi_email">Verifikasi Email</string>
    <string name="email_tidak_terverifikasi">Email tidak terverifikasi</string>
    <string name="berhasil_masuk">Berhasil masuk</string>
    <string name="fail_account">Gagal membuat akun, silahkan cek ulang kolom yang anda isi, periksa email yang digunakan dan coba kembali</string>
    <string name="failed_shop_list">Terjadi kesalahan, tekan tombol muat ulang untuk memuat daftar toko</string>
    <string name="failed_to_fetch_detail">Gagal menampilkan data, cek ulang toko yang anda pilih</string>
    <string name="ke_halaman_deteksi">Ke halaman deteksi</string>
    <string name="kirim_pesan">Kirim pesan</string>
    <string name="lupa_password_kata_sandi">Lupa password/kata sandi?</string>
    <string name="buat_akun">Buat akun</string>
    <string name="beranda">Beranda</string>
    <string name="deteksi">Deteksi</string>
    <string name="lokasi">Lokasi</string>
    <string name="forum">Forum</string>
    <string name="success_verification">Email verifikasi telah dikirim, silahkan cek email anda</string>
    <string name="profil_berhasil_diubah">Profil berhasil diubah</string>
    <string name="Something_happened">Terjadi kesalahan, silahkan coba kembali</string>
</resources>