<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:drawableTop="@drawable/baseline_refresh_24"
        android:text="@string/muat_ulang"
        android:id="@+id/refresh_detail_produk"
        android:visibility="gone"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:elevation="0dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:contentDescription="@string/speakable_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="8dp"
                android:id="@+id/detail_product_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@tools:sample/avatars"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/product_title"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:maxWidth="150dp"
                android:ellipsize="end"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="12dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/detail_product_image"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_product"/>
            <TextView
                android:id="@+id/product_price"
                android:layout_marginStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16dp"
                app:layout_constraintTop_toBottomOf="@id/product_title"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/harga_produk"/>
            <TextView
                android:layout_marginStart="8dp"
                android:id="@+id/product_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16dp"
                app:layout_constraintTop_toBottomOf="@id/product_price"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/dummy_location"/>
            <TextView
                android:id="@+id/product_avaibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="16dp"
                android:drawableStart="@drawable/baseline_star_24"
                app:layout_constraintTop_toBottomOf="@id/detail_product_image"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:text="@string/dummy_stock"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view2"
        app:cardElevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/card_view1"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/location_tittle"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_height="wrap_content"
                android:text="@string/shop_location"/>
            <com.google.android.gms.maps.MapView
                android:contentDescription="@string/speakable_toko"
                android:id="@+id/location_maps"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toBottomOf="@id/location_tittle"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>