<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardMaxElevation="4dp"
    android:elevation="4dp"
    android:orientation="vertical"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="6dp"
        android:layout_height="wrap_content">
        <ImageView
            android:contentDescription="@string/speakable_image"
            android:id="@+id/img_product"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="3"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_product"
            android:id="@+id/product_title"
            android:textSize="16sp"
            android:text="@string/dummy_product"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="3"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/product_title"
            app:layout_constraintStart_toEndOf="@id/img_product"
            android:id="@+id/product_location"
            android:textSize="16sp"
            android:text="@string/dummy_location"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/product_location"
            app:layout_constraintStart_toEndOf="@id/img_product"
            android:id="@+id/product_price"
            android:textSize="16sp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="3"
            android:text="@string/harga_produk"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="3"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/product_price"
            app:layout_constraintStart_toEndOf="@id/img_product"
            android:id="@+id/product_avaibility"
            android:textSize="16sp"
            android:text="@string/dummy_stock"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>