<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.guide.GuideFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/panduan_aplikasi"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    android:padding="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <ImageView
                    android:id="@+id/logo_paddy"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_weight="1"
                    android:src="@drawable/paddy"
                    android:contentDescription="@string/ambil_gambar_padi"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView"
                    app:layout_constraintVertical_bias="0.385" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ambil_ngambar"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/logo_paddy"
                    app:layout_constraintStart_toStartOf="@+id/logo_paddy"
                    app:layout_constraintTop_toBottomOf="@+id/logo_paddy" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:src="@drawable/arrow"
                    android:contentDescription="@string/langkah_selanjutnya"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/logo_paddy"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.601" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lihat_ndiagnosa"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/logo_investigation"
                    app:layout_constraintStart_toStartOf="@+id/logo_investigation"
                    app:layout_constraintTop_toBottomOf="@+id/logo_investigation" />


                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/langkah_selanjutnya"
                    android:layout_weight="1"
                    android:src="@drawable/arrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/logo_investigation"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.601" />

                <ImageView
                    android:id="@+id/logo_investigation"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:src="@drawable/investigate"
                    android:contentDescription="@string/lihat_hasil_diagonosa"
                    app:layout_constraintBottom_toBottomOf="@+id/logo_paddy"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/logo_paddy" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:contentDescription="@string/lihat_cara_pencegahan_dan_penyembuhan"
                    android:layout_weight="1"
                    android:src="@drawable/medicine"
                    app:layout_constraintBottom_toBottomOf="@+id/logo_investigation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView9"
                    app:layout_constraintTop_toTopOf="@+id/logo_investigation"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cek_pencegahan_dan_n_penyembuhan"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/imageView3"
                    app:layout_constraintStart_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="15sp"
            android:id="@+id/ambil_kamera"
            android:drawableTop="@drawable/baseline_camera_alt_24"
            android:drawableTint="@color/quantum_white_100"
            android:drawablePadding="8dp"
            android:text="@string/take_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ambil_galeri"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />
        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="15sp"
            android:drawableTop="@drawable/baseline_image_24"
            android:id="@+id/ambil_galeri"
            android:text="@string/take_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ambil_kamera"
            app:layout_constraintTop_toBottomOf="@id/cardView" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/ambil_kamera"
            android:id="@+id/card_view2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gambar_yang_dipilih"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="20sp"
                    android:id="@+id/label_dipilih"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/image_preview"
                    android:layout_width="match_parent"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/gambar_yang_akan_digunakan"
                    android:layout_height="300dp"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@id/label_dipilih"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:srcCompat="@drawable/baseline_image_24"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="12dp"
            android:drawableStart="@drawable/baseline_send_24"
            android:drawableTint="@color/quantum_white_100"
            android:drawablePadding="8dp"
            android:id="@+id/upload_gambar"
            android:text="@string/upload_gambar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view2"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:elevation="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>